@@ -14,7 +14,7 @@ my @sites = qw(
 );
 @sites = split(/:/, $ENV{SSLEAY_SITES}) if exists $ENV{SSLEAY_SITES};
 if (@sites) {
-    plan tests => scalar @sites * 6;
+    plan tests => scalar @sites * 7;
 }
 else {
     plan skip_all => 'No external hosts specified for SSL testing';
@@ -67,5 +67,11 @@ for my $site (@sites) {
         }
     }
 
-    close($_) for @sock;
+    for my $sock (@sock) {
+        SKIP : {
+            skip('not connected', 1) unless defined $sock;
+            pass('connected');
+	    close($sock); 
+	}
+    }
 }
